add admin, driver, and parent components with basic templates and styles; implement map component layout; update routing to redirect to home